Создано с помощью Colaboratory

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -42,11 +42,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "c29defa3",
       "metadata": {
         "id": "c29defa3",
-        "outputId": "ea758fac-a12b-4d05-855f-7a4a3f78db48",
+        "outputId": "f9770835-2f28-483a-8c20-ac731c5b8293",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -56,18 +56,18 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "12 3 4\n"
+            "10 2 4\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(48, 'rub. ', 12, 'kop.')"
+              "(40, 'rub. ', 8, 'kop.')"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 10
         }
       ],
       "source": [
@@ -75,7 +75,7 @@
         "s = (a*100+b)*n\n",
         "sk = s % 100\n",
         "sr = s // 100\n",
-        "sr, \"rub. \", sk, \"kop.\""
+        "sr, \"rub. \", sk,djxnvksdjnvkds \"kop.\""
       ]
     },
     {
@@ -84,7 +84,7 @@
       "id": "6378a995",
       "metadata": {
         "id": "6378a995",
-        "outputId": "cba3da1a-cd5a-46f5-e0f0-f48a03cb8922",
+        "outputId": "474d8bf2-f2a9-401e-ae34-821f1f3646ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -119,18 +119,21 @@
       "metadata": {
         "scrolled": true,
         "id": "bd32ed2b",
-        "outputId": "5f4caf79-37bf-4a72-851e-60ec04cc550c"
+        "outputId": "4b517524-ea81-4aab-c801-cadc604fe267",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "18064773765607550801425251468864907833685590016"
             ]
           },
-          "execution_count": 2,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 7
         }
       ],
       "source": [
@@ -191,22 +194,49 @@
       "id": "aca54a78",
       "metadata": {
         "id": "aca54a78",
-        "outputId": "21b097e8-8e03-47a8-ee0d-1c9cf1dca540"
+        "outputId": "2bbaabe6-81ff-4f9c-c76a-26696fa0971e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
-          "execution_count": 11,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 9
         }
       ],
       "source": [
         "7//3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "-xRhlSafFoYd",
+        "outputId": "46b50e76-06a0-4540-bfec-cf2be3773666",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "-xRhlSafFoYd",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
       ]
     }
   ],
@@ -236,6 +266,7 @@
     "colab": {
       "name": "Tasks.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
